style/style.css
.top {
  position: relative;
  overflow: hidden;
  height: auto;
  background: #3f328b;
  background: linear-gradient(202deg, #3f328b 23%, #1049e1 87%);
}

.top:after {
  content: '';
  width: 100vw;
  height: 100px;
  background: url("../assets/overlay.svg");
  display: block;
  background-repeat: no-repeat;
  background-size: cover;
  position: absolute;
  bottom: 0;
  z-index: 2;
}

.expand {
  height: 1000px !important;
}

nav {
  display: -webkit-box;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: justify;
      -ms-flex-pack: justify;
          justify-content: space-between;
  -webkit-box-align: center;
      -ms-flex-align: center;
          align-items: center;
  min-height: 8vh;
  font-family: sans-serif;
  overflow: hidden;
}

.nav__logo {
  padding: 20px 0;
}

.nav__links {
  position: absolute;
  right: 0px;
  height: 100vh;
  top: 0;
  background: #3f328b;
  display: -webkit-box;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-orient: vertical;
  -webkit-box-direction: normal;
      -ms-flex-direction: column;
          flex-direction: column;
  -ms-flex-pack: distribute;
      justify-content: space-around;
  -webkit-box-align: center;
      -ms-flex-align: center;
          align-items: center;
  width: 100%;
  -webkit-transform: translateX(100%);
          transform: translateX(100%);
  -webkit-transition: -webkit-transform 0.5s ease-in;
  transition: -webkit-transform 0.5s ease-in;
  transition: transform 0.5s ease-in;
  transition: transform 0.5s ease-in, -webkit-transform 0.5s ease-in;
  z-index: 3;
}

.nav__links li {
  opacity: 0;
}

.nav__burger {
  display: block;
  cursor: pointer;
  z-index: 1000;
}

.nav__links a {
  color: #fff;
  text-decoration: none;
  font-size: 14px;
  font-weight: bold;
}

.nav__links li {
  list-style: none;
  position: relative;
}

.nav__links li:after,
.category__button:after {
  content: '';
  height: 3px;
  width: 100%;
  background: #42D091;
  display: block;
  position: absolute;
  bottom: -15px;
  border-radius: 50px;
  opacity: 0;
  -webkit-transform: translateX(15px);
          transform: translateX(15px);
  -webkit-transition: all 0.5s ease;
  transition: all 0.5s ease;
}

.nav__link--active::after,
.category__button--active:after {
  content: '';
  height: 3px;
  width: 100%;
  background: #42D091;
  display: block;
  position: absolute;
  bottom: -15px;
  border-radius: 50px;
  opacity: 1 !important;
  -webkit-transform: translateX(0) !important;
          transform: translateX(0) !important;
}

.nav__links li:hover:after {
  opacity: 1;
  -webkit-transform: translateX(0);
          transform: translateX(0);
}

.nav__burger div {
  width: 25px;
  height: 2px;
  background: #fff;
  margin: 5px;
  -webkit-transition: all 0.3s ease;
  transition: all 0.3s ease;
}

.nav--active {
  -webkit-transform: translateX(0%);
          transform: translateX(0%);
}

@-webkit-keyframes navLinkFade {
  from {
    opacity: 0;
    -webkit-transform: translateX(50px);
            transform: translateX(50px);
  }
  to {
    opacity: 1;
    -webkit-transform: translateX(0px);
            transform: translateX(0px);
  }
}

@keyframes navLinkFade {
  from {
    opacity: 0;
    -webkit-transform: translateX(50px);
            transform: translateX(50px);
  }
  to {
    opacity: 1;
    -webkit-transform: translateX(0px);
            transform: translateX(0px);
  }
}

.toggle .line1 {
  -webkit-transform: rotate(-45deg) translate(-5px, 5px);
          transform: rotate(-45deg) translate(-5px, 5px);
}

.toggle .line2 {
  opacity: 0;
}

.toggle .line3 {
  -webkit-transform: rotate(45deg) translate(-5px, -5px);
          transform: rotate(45deg) translate(-5px, -5px);
}

.hero {
  padding: 50px 0;
}

.hero .col-6 {
  display: -webkit-box;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
      -ms-flex-pack: center;
          justify-content: center;
  -webkit-box-align: center;
      -ms-flex-align: center;
          align-items: center;
}

.hero__text {
  display: -webkit-box;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-orient: vertical;
  -webkit-box-direction: normal;
      -ms-flex-direction: column;
          flex-direction: column;
  text-align: center;
  -webkit-box-align: center;
      -ms-flex-align: center;
          align-items: center;
  margin-bottom: 50px;
  z-index: 2;
}

.hero__text p {
  color: #fff;
  font-size: 1.2rem;
  font-weight: 400;
  max-width: 80%;
  line-height: 2rem;
}

.hero__sub {
  color: #5485D9;
  font-size: 2rem;
  font-weight: 900;
  margin-bottom: -10px;
}

.hero__title {
  color: #fff;
  font-size: 4rem;
  font-weight: 900;
  position: relative;
}

.hero__title:after {
  content: '';
  height: 15px;
  width: 15px;
  display: block;
  border-radius: 50%;
  background: #42D091;
  position: absolute;
  right: -18px;
  bottom: 11px;
  z-index: 2;
}

.shape {
  position: absolute;
  z-index: 0;
  user-select: none;
  -moz-user-select: none;
  -webkit-user-select: none;
  -ms-user-select: none;
  -webkit-transition: all ease-in 0.3s;
  transition: all ease-in 0.3s;
}

.shape1 {
  top: -20px;
  left: -230px;
  width: 300px;
}

.shape2 {
  top: -20px;
  right: -250px;
  width: 400px;
}

.line {
  width: 50px;
}

.footer {
  background: #42D091;
  margin-top: -2px;
  padding-bottom: 30px;
}

.footer p {
  color: #fff;
  font-size: 1.3rem;
  -webkit-box-pack: center;
      -ms-flex-pack: center;
          justify-content: center;
}

.footer .col-5 {
  display: -webkit-box;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-orient: vertical;
  -webkit-box-direction: normal;
      -ms-flex-direction: column;
          flex-direction: column;
  -webkit-box-pack: center;
      -ms-flex-pack: center;
          justify-content: center;
  -ms-flex-line-pack: center;
      align-content: center;
  min-height: 100px;
}

.footer .row:first-child {
  border-bottom: 1px solid #fff;
}
/* ... */

